REO07_TAREFA02/src/antlr4/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.9.1

package antlr4;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, TIPO = 6, ID = 7, INT = 8, FLOAT = 9,
            LETRA = 10, NUM = 11, WS = 12;
    public static final int
            RULE_prog = 0, RULE_attr = 1, RULE_opArit = 2;

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "attr", "opArit"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "':'", "'='", "'*'", "'+'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, "TIPO", "ID", "INT", "FLOAT", "LETRA",
                "NUM", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Gramatica.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public GramaticaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        public ProgContext() {
        }

        public void copyFrom(ProgContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ProgramaContext extends ProgContext {
        public TerminalNode EOF() {
            return getToken(GramaticaParser.EOF, 0);
        }

        public List<AttrContext> attr() {
            return getRuleContexts(AttrContext.class);
        }

        public AttrContext attr(int i) {
            return getRuleContext(AttrContext.class, i);
        }

        public List<OpAritContext> opArit() {
            return getRuleContexts(OpAritContext.class);
        }

        public OpAritContext opArit(int i) {
            return getRuleContext(OpAritContext.class, i);
        }

        public ProgramaContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterPrograma(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitPrograma(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor)
                return ((GramaticaVisitor<? extends T>) visitor).visitPrograma(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            _localctx = new ProgramaContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(14);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
                    {
                        {
                            setState(8);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                                case 1: {
                                    setState(6);
                                    attr();
                                }
                                break;
                                case 2: {
                                    setState(7);
                                    opArit(0);
                                }
                                break;
                            }
                            setState(10);
                            match(T__0);
                        }
                    }
                    setState(16);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(17);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AttrContext extends ParserRuleContext {
        public AttrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attr;
        }

        public AttrContext() {
        }

        public void copyFrom(AttrContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class AtribuicaoContext extends AttrContext {
        public TerminalNode ID() {
            return getToken(GramaticaParser.ID, 0);
        }

        public TerminalNode TIPO() {
            return getToken(GramaticaParser.TIPO, 0);
        }

        public TerminalNode INT() {
            return getToken(GramaticaParser.INT, 0);
        }

        public TerminalNode FLOAT() {
            return getToken(GramaticaParser.FLOAT, 0);
        }

        public AtribuicaoContext(AttrContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterAtribuicao(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitAtribuicao(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor)
                return ((GramaticaVisitor<? extends T>) visitor).visitAtribuicao(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AttrContext attr() throws RecognitionException {
        AttrContext _localctx = new AttrContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_attr);
        int _la;
        try {
            _localctx = new AtribuicaoContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(19);
                match(ID);
                setState(20);
                match(T__1);
                setState(21);
                match(TIPO);
                setState(22);
                match(T__2);
                setState(23);
                _la = _input.LA(1);
                if (!(_la == INT || _la == FLOAT)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OpAritContext extends ParserRuleContext {
        public OpAritContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_opArit;
        }

        public OpAritContext() {
        }

        public void copyFrom(OpAritContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class MultiplicacaoContext extends OpAritContext {
        public List<OpAritContext> opArit() {
            return getRuleContexts(OpAritContext.class);
        }

        public OpAritContext opArit(int i) {
            return getRuleContext(OpAritContext.class, i);
        }

        public MultiplicacaoContext(OpAritContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterMultiplicacao(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitMultiplicacao(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor)
                return ((GramaticaVisitor<? extends T>) visitor).visitMultiplicacao(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class VariavelContext extends OpAritContext {
        public TerminalNode ID() {
            return getToken(GramaticaParser.ID, 0);
        }

        public VariavelContext(OpAritContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterVariavel(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitVariavel(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor)
                return ((GramaticaVisitor<? extends T>) visitor).visitVariavel(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SomaContext extends OpAritContext {
        public List<OpAritContext> opArit() {
            return getRuleContexts(OpAritContext.class);
        }

        public OpAritContext opArit(int i) {
            return getRuleContext(OpAritContext.class, i);
        }

        public SomaContext(OpAritContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterSoma(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitSoma(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor) return ((GramaticaVisitor<? extends T>) visitor).visitSoma(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class RealContext extends OpAritContext {
        public TerminalNode FLOAT() {
            return getToken(GramaticaParser.FLOAT, 0);
        }

        public RealContext(OpAritContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterReal(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitReal(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor) return ((GramaticaVisitor<? extends T>) visitor).visitReal(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class InteiroContext extends OpAritContext {
        public TerminalNode INT() {
            return getToken(GramaticaParser.INT, 0);
        }

        public InteiroContext(OpAritContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).enterInteiro(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GramaticaListener) ((GramaticaListener) listener).exitInteiro(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GramaticaVisitor)
                return ((GramaticaVisitor<? extends T>) visitor).visitInteiro(this);
            else return visitor.visitChildren(this);
        }
    }

    public final OpAritContext opArit() throws RecognitionException {
        return opArit(0);
    }

    private OpAritContext opArit(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OpAritContext _localctx = new OpAritContext(_ctx, _parentState);
        OpAritContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, 4, RULE_opArit, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(29);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case INT: {
                        _localctx = new InteiroContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(26);
                        match(INT);
                    }
                    break;
                    case FLOAT: {
                        _localctx = new RealContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(27);
                        match(FLOAT);
                    }
                    break;
                    case ID: {
                        _localctx = new VariavelContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(28);
                        match(ID);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(39);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(37);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                                case 1: {
                                    _localctx = new MultiplicacaoContext(new OpAritContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_opArit);
                                    setState(31);
                                    if (!(precpred(_ctx, 5)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(32);
                                    match(T__3);
                                    setState(33);
                                    opArit(6);
                                }
                                break;
                                case 2: {
                                    _localctx = new SomaContext(new OpAritContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_opArit);
                                    setState(34);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(35);
                                    match(T__4);
                                    setState(36);
                                    opArit(5);
                                }
                                break;
                            }
                        }
                    }
                    setState(41);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 2:
                return opArit_sempred((OpAritContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean opArit_sempred(OpAritContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 5);
            case 1:
                return precpred(_ctx, 4);
        }
        return true;
    }

    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}